--- a/views/profile/_student_jobs.pug
+++ b/views/profile/_student_jobs.pug
@@ -1,20 +1,17 @@
 .jobs-container
-  each job in jobs
+  each appliedJob in appliedJobs
+    - var job = appliedJob._job
     .job-item.flex(data-job-id=job.id)
       .job-info
         p.job-title
-          a(href='/job/' + job.id)= job.title
-          if !user.isStudent()
-            span 申请人数：<strong>#{job._appliersSize}</strong>
-            button.btn.btn-primary 编辑
+          a.title-link(href='/job/' + job.id)= job.title
         p.job-basics
           span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
-          span 申请日期：<strong>#{job._id.getTimestamp().toLocaleDateString()}</strong>
+          span 申请日期：<strong>#{appliedJob.createdAt.toLocaleDateString()}</strong>
           span 公司：    <strong>#{job._creator.name}</strong>
           span 工作地点：<strong>#{job.address}</strong>
           span 薪资：    <strong>#{job.salary}</strong>
-          if user.isStudent()
-            span 申请人数：<strong>#{job._appliersSize}</strong>
+          span 申请人数：<strong>#{job._appliersSize}</strong>
         .job-others.flex
           div
             p 工作职责：
@@ -22,6 +19,5 @@
           div
             p 要求：
             div= job.requirement
-        if user.isStudent()
-          .job-status
-            // TODO 申请状态: 通过或拒绝
+        .job-status
+          // TODO 申请状态: 通过或拒绝
