--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -11,7 +11,7 @@ block content
           a(href='/profile/account' class={active: pos == 'account'}) 账号与密码
           a(href='/profile/user_info' class={active: pos == 'user_info'}) 基本信息
         li
-          if user.isStudent()
+          if currentUser.type == 0
             a(href='/profile/jobs' class={active: pos == 'jobs'}) 申请的职位
           else
             a(href='/profile/jobs' class={active: pos == 'jobs'}) 发布的职位
@@ -19,6 +19,12 @@ block content
         if pos == 'account'
           include _account.pug
         if pos == 'user_info'
-          include _user_info.pug
+          if currentUser.type == 0
+            include _student.pug
+          else
+            include _company.pug
         else if pos == 'jobs'
-          include _jobs.pug
+          if currentUser.type == 0
+            include _student_jobs.pug
+          else
+            include _company_jobs.pug
