--- a/views/jobs/appliers.pug
+++ b/views/jobs/appliers.pug
@@ -4,23 +4,34 @@ block css
 block js
   script(src='/js/job.js')
 block content
-  each applier in appliers
-    - var user = applier._user
-    h3
-      a(href='/job/' + job.id)= job.title
-    | ——申请者列表
-    .applier-info
-      span= user.name
-      span= user.gender
-      span= user.university
-      span= user.major
-      span 申请时间：#{applier.createdAt.toLocaleDateString()}
-    .apply-result
-      case applier.status
-        when 0
-          button.btn.btn-primary 通过
-          button.btn 拒绝
-        when 1
-          .apply-refused 已拒绝：#{applier.message}
-        when 2
-          .apply-passed 已通过：#{applier.message}
+  .content.appliers-container
+    each applier in appliers
+      - var user = applier._user
+      .applier(data-user-id=user.id, data-job-id=job.id)
+        .applier-title
+          a.title-link(href='/job/' + job.id)= job.title
+          |  — 申请者列表
+        .applier-info
+          span= user.name
+          span= user.gender
+          span= user.university
+          span= user.major
+          span 申请时间：#{applier.createdAt.toLocaleDateString()}
+        .apply-result
+          case applier.status
+            when 0
+              .handle-apply
+                .apply-op
+                  button.btn.btn-primary 通过
+                  button.btn 拒绝
+                .op-message(style={display: 'none'})
+                  form
+                    .form-group
+                      textarea.form-control(name='op_message')
+                    .form-group
+                      button.btn.btn-primary 确定
+                      button.btn 取消
+            when 1
+              .apply-refused 已拒绝：#{applier.message}
+            when 2
+              .apply-passed 已通过：#{applier.message}
