--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -6,23 +6,23 @@ block js
 block content
   .content.jobs-container
     each job in jobs
-      .job-item.flex(data-job-id=job.id)
-        .job-info
-          p.job-title
-            a(href='/job/' + job.id)= job.title
-          p.job-basics
-            span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
-            span 公司：<strong>#{job._creator.name}</strong>
-            span 工作地点：<strong>#{job.address}</strong>
-            span 薪资：<strong>#{job.salary}</strong>
-          .job-others.flex
-            div
-              p 工作职责：
-              div= job.duty
-            div
-              p 要求：
-              div= job.requirement
-        .job-op
-          p
-            button.btn.btn-primary 申请职位
-      .jobs-pages
+      .job-item(data-job-id=job.id)
+        div.flex.job-title
+          a(href='/job/' + job.id)= job.title
+          if req.currentUser && req.currentUser.type === 0
+            if job.applied
+              span.apply-result 已申请
+            else
+              button.btn.btn-primary 申请职位
+        div.job-basics
+          span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
+          span 公司：<strong>#{job._creator.name}</strong>
+          span 工作地点：<strong>#{job.address}</strong>
+          span 薪资：<strong>#{job.displaySalary}</strong>
+        div.job-others.flex
+          div
+            p 工作职责：
+            div= job.duty
+          div
+            p 要求：
+            div= job.requirement
