--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -129,6 +129,7 @@ label.input-error {
   background-color: #53868B;
   border: 1px solid #53868B;
   border-radius: 3px;
+  cursor:pointer;
 }
 
 .btn:hover {
