--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -1,13 +1,15 @@
 .account
   div
     .header 修改账号信息
-    form
+    form(method='post' action='/profile/change_account' enctype="multipart/form-data")
       .form-group
         label(class='label label-input') 头像：
         .avatar
           img(width=70 height=70 src=user.avatar alt=user.name)
           span.upload
-            button(class='btn btn-primary') 上传头像
+            button(class='btn')
+              label(for='avatar') 上传头像
+              input(type='file' name='avatar')
             span 你也可以将图片从电脑上拖过来
       .form-group
         label(for='name' class='label label-input') 用户名：
@@ -17,12 +19,12 @@
         input(type='email', name='email', id='email', class='form-control', value=user.email, required)
       .form-group
         label(for='phone' class='label label-input') 电话：
-        input(type='text', name='phone', id='phone', class='form-control', value=user.phone, required)
+        input(type='text', name='phone', id='phone', class='form-control', value=user.phone)
       .form-group
         input(type='submit', value='更新账号信息' class='btn btn-primary')
   div
     .header 修改密码
-    form
+    form(method='post' action='/profile/change_password')
       .form-group
         label(for='old_pwd' class='label label-input') 旧密码：
         input(type='password', name='old_pwd', id='old_pwd', class='form-control', value=user.password.slice(0,12), readonly)
