--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -224,3 +224,15 @@ ul {
     }
   }
 }
+
+/* flash */
+.flash-success {
+  padding: 0.5em 0;
+  color: green;
+  margin-bottom: 0.5em;
+}
+.flash-error {
+  padding: 0.5em 0;
+  color: red;
+  margin-bottom: 0.5em;
+}
