--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -25,6 +25,10 @@
   div
     .header 修改密码
     form(method='post' action='/profile/change_password')
+      if flash.success
+        .flash-success= flash.success
+      else if flash.error
+        .flash-error= flash.error
       .form-group
         label(for='old_pwd' class='label label-input') 旧密码：
         input(type='password', name='old_pwd', id='old_pwd', class='form-control')
