--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -31,7 +31,13 @@ main.content {
 
 /* horizontal center */
 .hcenter {
-  margin:auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* text center */
+.text-center {
+  text-align: center;
 }
 
 .flex {
