--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -14,3 +14,4 @@ block content
         input(type='password', name='password', id='password' class='form-control', required)
       .form-group
         input(type='submit', value='登 陆' class='btn btn-primary')
+        a(href='/password_reset') 忘记密码
