--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -2,10 +2,14 @@ extends ../layouts/main
 block css
   link(href="/css/password_reset.css", rel="stylesheet")
 block content
-  .password-reset.hcenter
+  .password-reset.hcenter.text-center
+    h1 密码重置
+    if error
+      .flash-error= error
+    else if success
+      .flash-success= success
     if step == 1
       form(method='post' action='/password_reset')
-        h1.text-center 密码重置
         div
           p.reset-hint.text-center 请输入你注册的邮箱地址，我们将会发送一封邮件给你，里面包含密码重置链接，点击链接进入重置流程
           .form-group
@@ -13,6 +17,17 @@ block content
           .form-group
             input(type='submit' class='btn btn-primary' value='发送重置邮件')
     else if step == 2
-      h1.text-center 密码重置
+      p.reset-hint.text-center 请检查你的邮箱是否收到了重置邮件，里面包含了重置链接，点击链接进行重置. 如果没有，请看看垃圾邮箱
+    else if step == 3
+      form(method='post' action='/password_reset/' + token)
+        .form-group
+          label(for='new_password' class='label label-input') 请输入新的密码： 
+          input(type='password' name='new_password' id='new_password' class='form-control' autofocus)
+        .form-group
+          label(for='new_password_again' class='label label-input') 请输入新的密码： 
+          input(type='password' name='new_password_again' id='new_password_again' class='form-control' autofocus)
+        .form-group
+          input(type='submit' class='btn btn-primary' value='修改密码')
+    else
       div
-        p.reset-hint.text-center 请检查你的邮箱是否收到了重置邮件，里面包含了重置链接，点击链接进行重置. 如果没有，请看看垃圾邮箱
+        a(href='/login') 马上去登陆
