--- a/assets/sass/login.scss
+++ b/assets/sass/login.scss
@@ -2,4 +2,10 @@
 
 .login-container {
   max-width: 720px;
+  input[type='submit'] {
+    margin-right: 1em;
+    & + a {
+      font-size: 0.9em;
+    }
+  }
 }
