--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -3,7 +3,8 @@ block css
   link(href="/css/password_reset.css", rel="stylesheet")
 block content
   .password-reset.hcenter.text-center
-    h1 密码重置
+    if step < 4
+      h2 密码重置
     if error
       .flash-error= error
     else if success
@@ -24,10 +25,11 @@ block content
           label(for='new_password' class='label label-input') 请输入新的密码： 
           input(type='password' name='new_password' id='new_password' class='form-control' autofocus)
         .form-group
-          label(for='new_password_again' class='label label-input') 请输入新的密码： 
+          label(for='new_password_again' class='label label-input') 再次输入新的密码： 
           input(type='password' name='new_password_again' id='new_password_again' class='form-control' autofocus)
         .form-group
           input(type='submit' class='btn btn-primary' value='修改密码')
     else
       div
+        h2 密码重置成功
         a(href='/login') 马上去登陆
