--- a/views/profile/_company_jobs.pug
+++ b/views/profile/_company_jobs.pug
@@ -1,3 +1,5 @@
+.new-job
+  a(href='/jobs/new' class='btn btn-primary') 发布新的职位
 .jobs-container
   each job in jobs
     .job-item.flex(data-job-id=job.id)
