--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -49,7 +49,12 @@ p {
 }
 
 a {
+  color: #0276FD;
   text-decoration: none;
+}
+
+.small-font {
+  font-size: 0.8em;
 }
 
 /* ++++++++++++++ form and controls +++++++++++++++++ */
