--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -4,45 +4,39 @@ block css
 block js
   script(src='/js/job.js')
 block content
-  form(method='post', action='/jobs', class='new-job')
-    .flex
-      div
-        .form-group
-          label(for='title' class='label label-input') 职位名称：
-          input(type='text', name='title', id='title', class='form-control' autofocus, required)
-        .form-group
-          label(for='address' class='label label-input') 工作地点：
-          input(type='text', name='address', id='address', class='form-control', required)
-        .form-group
-          label(for='salary' class='label label-input') 薪资：
-          select(name='salary', id='salary' class='form-control', required)
-            option(value='' selected) 请选择
-            each s, i in salaries
-              option(value=i)= s 
-      div
-        .form-group
-          label(for='business' class='label label-input') 行业：
-          select(name='business', id='business' class='form-control' required)
-            option(value='' selected) 请选择
-            each b in businesses
-              option(value=b)= b 
-        .form-group
-          label(for='type' class='label label-input') 类别：
-          select(name='type', id='type' class='form-control', required)
-            option(value='' selected) 请选择
-            each t in types
-              option(value=t)= t 
-        .form-group
-          label(for='notes' class='label label-input') 备注：
-          input(type='text', name='notes', id='notes', class='form-control')
-      div
-        .form-group
-          label(for='duty' class='label label-input') 职责：
-          textarea(name='duty', id='duty', class='form-control', rows=12, required, data-rule-minlength=64)
-      div
-        .form-group
-          label(for='requirement' class='label label-input') 要求：
-          textarea(name='requirement', id='requirement', class='form-control', rows=12, required, data-rule-minlength=64)
-    div
-      .form-group
-        input(type='submit', value='发布职位', class='btn btn-primary')
+  form(method='post', action='/jobs', class='new-job hcenter')
+    .form-group
+      label(for='title' class='label label-input') 职位名称：
+      input(type='text', name='title', id='title', class='form-control' autofocus, required)
+    .form-group
+      label(for='address' class='label label-input') 工作地点：
+      input(type='text', name='address', id='address', class='form-control', required)
+    .form-group
+      label(for='salary' class='label label-input') 薪资：
+      select(name='salary', id='salary' class='form-control', required)
+        option(value='' selected) 请选择
+        each s, i in salaries
+          option(value=i)= s 
+    .form-group
+      label(for='business' class='label label-input') 行业：
+      select(name='business', id='business' class='form-control' required)
+        option(value='' selected) 请选择
+        each b in businesses
+          option(value=b)= b 
+    .form-group
+      label(for='type' class='label label-input') 类别：
+      select(name='type', id='type' class='form-control', required)
+        option(value='' selected) 请选择
+        each t in types
+          option(value=t)= t 
+    .form-group
+      label(for='duty' class='label label-input') 职责：
+      textarea(name='duty', id='duty', class='form-control rich-editor', rows=12, required, data-rule-minlength=64)
+    .form-group
+      label(for='requirement' class='label label-input') 要求：
+      textarea(name='requirement', id='requirement', class='form-control rich-editor', rows=12, required, data-rule-minlength=64)
+    .form-group
+      label(for='notes' class='label label-input') 备注：
+      input(type='text', name='notes', id='notes', class='form-control')
+    .form-group
+      input(type='submit', value='发布职位', class='btn btn-primary')
