--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -153,7 +153,7 @@
           display:inline-block;
           margin-left:1em;
           vertical-align:top;
-          button {
+          span:first-child {
             position:relative;
             input {
               position:absolute;
@@ -165,7 +165,7 @@
             }
           }
 
-          span {
+          span:last-child {
             font-size:0.8em;
             color:#777;
             display:block;
