--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -1,53 +1,52 @@
 .account
   div
     .header 修改账号信息
-    form(method='post' action='/profile/change_account' enctype="multipart/form-data" class='account-edit')
-      .form-group
-        label(class='label label-input') 头像：
-        .avatar
-          img(class='current-avatar' width=70 height=70 src=user.avatarUrl() alt=user.name)
-          span.upload
-            span(class='btn')
-              label(for='avatar') 上传头像
-              input(type='file' id='avatar' name='avatar')
-            span 你也可以将图片从电脑上拖过来
-          .overlay(style={display: 'none'})
-          .cropDlg(style={display: 'none'})
-            form(method='post' action='/profile/change_avatar2')
-              .head
-                span 裁减并替换新的头像
-                a.close × 
-              .middle
-                .crop-container.hcenter
-                  img.origin-img
-                  .cropArea
-                    img.crop-img
-                  .move-area.crop-edge
-                  .left-edge.crop-edge
-                  .top-edge.crop-edge
-                  .right-edge.crop-edge
-                  .bottom-edge.crop-edge
-              input(type='hidden' name='origin_img_path')
-              input(type='hidden' name='x')
-              input(type='hidden' name='y')
-              input(type='hidden' name='width')
-              input(type='hidden' name='height')
-              .foot
-                input(type='submit' class='btn btn-primary' value='保存')
-      .form-group
-        label(for='name' class='label label-input') 用户名：
-        input(type='text', name='name', id='name', class='form-control', value=user.name, required)
-      .form-group
-        label(for='email' class='label label-input') Email：
-        input(type='email', name='email', id='email', class='form-control', value=user.email, required)
-      .form-group
-        label(for='phone' class='label label-input') 电话：
-        input(type='text', name='phone', id='phone', class='form-control', value=user.phone)
-      .form-group
-        input(type='submit', value='更新账号信息' class='btn btn-primary')
+    .account-content
+      .avatar
+        .form-group 头像：
+        img(class='current-avatar' width=70 height=70 src=user.avatarUrl() alt=user.name)
+        span.upload
+          span(class='btn')
+            label(for='avatar') 上传头像
+            input(type='file' id='avatar' name='avatar')
+          span 你也可以将图片从电脑上拖过来
+      .overlay(style={display: 'none'})
+      form(method='post' action='/profile/change_avatar2' class='cropDlg' style={display: 'none'})
+        .head
+          span 裁减并替换新的头像
+          a.close × 
+        .middle
+          .crop-container.hcenter
+            img.origin-img
+            .cropArea
+              img.crop-img
+            .move-area.crop-edge
+            .left-edge.crop-edge
+            .top-edge.crop-edge
+            .right-edge.crop-edge
+            .bottom-edge.crop-edge
+        input(type='hidden' name='origin_img_path')
+        input(type='hidden' name='x')
+        input(type='hidden' name='y')
+        input(type='hidden' name='width')
+        input(type='hidden' name='height')
+        .foot
+          input(type='submit' class='btn btn-primary' value='保存')
+      form(method='post' action='/profile/change_account' enctype="multipart/form-data" class='account-edit')
+        .form-group
+          label(for='name' class='label label-input') 用户名：
+          input(type='text', name='name', id='name', class='form-control', value=user.name, required)
+        .form-group
+          label(for='email' class='label label-input') Email：
+          input(type='email', name='email', id='email', class='form-control', value=user.email, required)
+        .form-group
+          label(for='phone' class='label label-input') 电话：
+          input(type='text', name='phone', id='phone', class='form-control', value=user.phone)
+        .form-group
+          input(type='submit', value='更新账号信息' class='btn btn-primary')
   div
     .header 修改密码
-    form(method='post' action='/profile/change_password')
+    form(method='post' action='/profile/change_password' class='password-edit account-content')
       if flash.success
         .flash-success= flash.success
       else if flash.error
