--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -81,7 +81,12 @@
 
           a.job-edit {
             position: absolute;
-            right: 6px;
+            right: 75px;
+          }
+
+          a.job-questions {
+            position: absolute;
+            right: 0;
           }
         }
 
