--- a/views/profile/_company_jobs.pug
+++ b/views/profile/_company_jobs.pug
@@ -9,6 +9,7 @@
           span 申请人数：
             a.appliers-link(href='/job/' + job.id + '/appliers')= job._appliersSize
           a.job-edit(href='/job/' + job.id + '/edit') 编辑
+          a.job-questions(href='/job/' + job.id + '/questions') 题目列表
         p.job-basics
           span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
           span 工作地点：<strong>#{job.address}</strong>
