--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -9,7 +9,7 @@ block content
       | 职位
       a.job-title(href='/job/' + job.id)= job.title
       | 的题目列表
-      a.btn.btn-primary.new-question(href='/job/' + job.id + 'questions/new') 新建题目
+      a.btn.btn-primary.new-question(href='/job/' + job.id + '/questions/new') 新建题目
     .questions-list
       if questions.length == 0
         .text-center.no-questions 您还没有为本职位创建任何题目，预先给出试题有助于深入及提前考察面试者！
