--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -1,5 +1,6 @@
 extends ../layouts/main
 block js
+  script(src='/ckeditor/ckeditor.js')
   script(src='/js/questions.js')
 block css
   link(href="/css/questions.css", rel="stylesheet")
@@ -11,10 +12,15 @@ block content
       | 新增一道试题：
     form.questions-new-form(method='post' action='/job/' + job.id + '/questions/create')
       .form-group
-        label(for='level' class='label label-input') 难度：
-        input(type='email', name='email', id='email', class='form-control' autofocus, required)
+        label(class='label label-input text-bold') 难度：
+        .levels
+          each l in [0,1,2,3,4,5]
+            .level
+              input(type='radio', name='level', id='level' + l, value=l checked=l == 0)
+              label(for='level' + l class='label')
+                | #{gModels.Question.LEVEL_DESCS[l]}（期望#{gModels.Question.LEVELS_TIME_DESCS[l]}能完成解答）
       .form-group
-        label(for='content' class='label label-input') 题目内容：
-        textarea(name='content', id='password' class='form-control', required)
+        label(for='content' class='label label-input text-bold') 题目内容：
+        textarea(name='content', id='content' class='form-control rich-editor', required)
       .form-group
         input(type='submit', value='保 存' class='btn btn-primary')
